--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "firebase": "^6.1.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
