--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^6.1.0",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
